
User tools and API improvements and changes:

- Support for the online access interface was removed.
- Support for NEC and Sun compilers was removed.
- Improvement of `SCOREP_CUDA_ENABLE` options to include implicit
  dependencies and define a default in line with the overall
  measurement strategy of Score-P. Check `scorep-info` for more
  information.

Compatibility:

- Score-P now requires a shared or PIC libbfd. Therefore, the
  configure option --with-libbfd now also accepts 'download' to
  download, build and install a libbfd at make time.
- Address-to-line lookup now requires the availability of
  dl_iterate_phdr from link.h where previously /proc/self/maps was
  parsed. In addition, symbols from dlopened shared libraries are
  considered if linker auditing is available and the LD_AUDIT
  environment variable is set to
  <prefix>/lib[/backend]/libscorep_rtld_audit.so when executing an
  instrumented binary.
- The C++ compiler requirements to build Score-P were raised from
  C++98 to C++11.
- For building scorep-score, use CC and CXX provided by cubelib-config
  but allow for individual flags via (C|CXX|LD)FLAGS_FOR_BUILD_SCORE.
- For building the library-wrapper generator used by `scorep-libwrap-init`,
  use CC and CXX provided by `llvm-config` or via `(CC|CXX)_FOR_BUILD_LIBWRAP`.
  Additionally, allow for individual flags via
  `((CPP|C|CXX|LD)FLAGS|LIBS)_FOR_BUILD_LIBWRAP`. The latter supersedes the
  previous `LIBCLANG_((CPP|CXX|LD)FLAGS|LIBS)`.
- Support for Intel MIC platforms is deprecated.
- Support for IBM Blue Gene/Q platforms is deprecated.

Bugfixes:

- MPI request management now uses internal Score-P memory management.
  However, a measurement will now have increased memory requirements.
  Please be aware of this.
- Add missing Fortran wrappers to the MPI adapter for
  - `MPI_Alloc_mem`
  - `MPI_Free_mem`
  - `MPI_Win_shared_query`
- Non-blocking MPI I/O events now produce the correct `IoOperationTest`