@@ -59,6 +59,12 @@ User tools and API improvements and changes:
   dependencies and define a default in line with the overall
   measurement strategy of Score-P. Check `scorep-info` for more
   information.
+- Lustre stripe I/O handle attributes now also support Lustre
+  Progressive File Layouts (PFL). The `Number of Extents` attribute
+  holds the number of components. `Extent Begin` holds the extent
+  begin offsets. This and the existing `Stripe Count` and `Stripe
+  Size` attributes are now a comma separated list of values. Some
+  values can also be constants like `DEFAULT` or `WIDE`.
 
 Compatibility:
 
